src/App.css
/* ... */
.merchandise-content h2 {
  font-size: 1.4em;
  font-weight: bold;
  color: #f0b90b;
  margin-bottom: 10px;
  text-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
}

.merchandise-content p {
  font-size: 1em;
  color: #555;
  line-height: 1.5;
}

.merchandise-content a {
  display: inline-block;
  margin-top: 15px;
  padding: 10px 20px;
  font-size: 1em;
  font-weight: bold;
  color: #fff;
  background: #b09c2b;
  border-radius: 8px;
  text-decoration: none;
  transition: background 0.2s ease;
}

.merchandise-content a:hover {
  background: #b09c2b;
}

@media (max-width: 768px) {
  .merchandise-container {
    padding: 20px;
  }

  .merchandise-title {
    font-size: 2em;
  }

  .merchandise-details {
    grid-template-columns: 1fr;
  }
}









/* Why Us */

.why-section {
  padding: 80px 20px;
  color: #fff;
  text-align: center;
}

.why-header {
  margin-bottom: 50px;
}

.why-header h2 {
  font-size: 2.8rem;
  color: #f0b90b;
  margin-bottom: 15px;
  text-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
}



.why-header p {
  font-size: 1.2rem;
  color: #ffffff;
  max-width: 600px;
  margin: 0 auto;
}

.choose-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 30px;
  align-items: center;
}

.choose-main img {
  max-width: 100%;
  border-radius: 15px;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
  transform: scale(1);
  transition: transform 0.3s ease-in-out;
}

.choose-main img:hover {
  transform: scale(1.05);
}

.choose-box {
  background: linear-gradient(145deg, #1a2348, #101837);
  border-radius: 15px;
  padding: 25px;
  text-align: left;
  transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
}

.choose-box:hover {
  transform: translateY(-10px);
  background: #1e2a5a;
  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
}

.choose-box i {
  font-size: 2.5rem;
  color: #4caf50;
  text-shadow: 0 0 10px rgba(76, 175, 80, 0.8);
}

.choose-box h3 {
  font-size: 1.5rem;
  margin: 20px 0 10px;
  color: #f0b90b;
}

.choose-box p {
  color: #c4c8d6;
  font-size: 1rem;
  line-height: 1.5;
}


/* Join Section */
.join-section {
  padding: 100px 20px;
  color: #fff;
  overflow: hidden;
  text-align: center;
  position: relative;
}

.join-container {
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 50px;
}

.join-content {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 60px;
  text-align: center;
}

.join-images {
  position: relative;
  width: 100%;
  /* max-width: 450px;
  aspect-ratio: 1 / 1; */
  overflow: visible;
}

.join-image {
  position: absolute;
  animation: float 6s ease-in-out infinite;
  max-width: 120px;
  filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.5));
}

.join-btc {
  top: -20px;
  left: -40px;
  transform: rotate(15deg);
}

.join-eth {
  bottom: -20px;
  right: -40px;
  transform: rotate(-10deg);
}

@keyframes float {

  0%,
  100% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-15px);
  }
}

.join-text {
  max-width: 600px;
}

.join-title {
  font-size: 2.8rem;
  color: #ffcc00;
  margin-bottom: 20px;
  line-height: 1.2;
}

.highlight {
  color: #f0b90b;
  font-weight: bold;
}

.join-description {
  font-size: 1.2rem;
  color: #cfcfcf;
  margin-bottom: 30px;
  line-height: 1.6;
}

.join-button {
  padding: 15px 40px;
  font-size: 1.2rem;
  font-weight: bold;
  color: #fff;
  background: linear-gradient(90deg, #ffcc00, #ff9900);
  border: none;
  border-radius: 30px;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s ease-in-out;
  box-shadow: 0 10px 20px rgba(255, 153, 0, 0.4);
}

.join-button:hover {
  background: linear-gradient(90deg, #ff9900, #ff6600);
  transform: translateY(-5px);
  box-shadow: 0 15px 25px rgba(255, 102, 0, 0.5);
}



























/* Footer */

/* Footer Section */
.footer-section {
  color: #c4c8d6;
  padding: 40px 20px;
  text-align: center;
}

.footer-content {
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.footer-logo h2 {
  
  font-size: 2.5rem;
    margin-bottom: 20px;
    color: #f0b90b;
    text-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
}


.footer-socials {
  display: flex;
  gap: 15px;
}

.footer-socials a {
  color: #c4c8d6;
  font-size: 1.5rem;
  transition: color 0.3s ease, transform 0.2s ease;
}

.footer-socials a:hover {
  color: #4caf50;
  transform: translateY(-5px);
}

.footer-links {
  display: flex;
  gap: 20px;
}

.footer-links a {
  color: #ffffff;
  text-decoration: none;
  font-size: 1rem;
  transition: color 0.3s ease;
}

.footer-links a:hover {
  color: #ffffff;
}

.footer-copy {
  font-size: 0.9rem;
  color: #7f8496;
}

.footer-copy p {
  margin: 0;
}


/* Services Section */

/* CSS */
.services-page {
  padding: 60px 20px;
  color: #333;
  font-family: 'Arial', sans-serif;
}

.services-hero-section {
  text-align: center;
  padding: 100px 20px;
  font-size: 2.5rem;
  color: #f0b90b;
  text-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
}

.services-hero-title {
  font-size: 3.5rem;
  font-weight: bold;
}

.services-hero-subtitle {
  font-size: 1.5rem;
  margin-top: 20px;
  color: #ddd;
}

.services-section {
  padding: 80px 20px;
}

.services-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 40px;
}

.service-card {
  background: #fff;
  padding: 30px;
  border-radius: 12px;
  text-align: center;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s, box-shadow 0.3s;
}

.service-card:hover {
  transform: translateY(-5px);
  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
}

.service-icon {
  width: 60px;
  margin-bottom: 20px;
}

.service-title {
  font-size: 1.8rem;
  margin-bottom: 10px;
}

.service-description {
  font-size: 1rem;
  margin-bottom: 20px;
  color: #555;
}
/* ... */

